RESOLVED FIXED274257
[GStreamer] Silence GstVideoFrame leaks
https://bugs.webkit.org/show_bug.cgi?id=274257
Summary [GStreamer] Silence GstVideoFrame leaks
Philippe Normand
Reported 2024-05-16 07:02:26 PDT
. the gst_video_frame_map done from "auto videoFrame = makeUnique<GstMappedFrame>(buffer, &videoInfo, GST_MAP_READ);" has no corresponding unmap...
Attachments
Philippe Normand
Comment 1 2024-05-16 07:36:13 PDT
CCing the author of this.
Carlos Garcia Campos
Comment 2 2024-05-17 02:30:55 PDT
This is not specific to Skia, the problem is that ImageDecoderGStreamer is always created with two references, because it's added to a global Vector<RefPtr<ImageDecoderGStreamer>> for some reason. That vector is kept alive until teardownGStreamerImageDecoders() is called, which is supposed to be called on web process exit.
Philippe Normand
Comment 3 2024-05-20 03:11:47 PDT
EWS
Comment 4 2024-05-21 02:56:43 PDT
Committed 279052@main (f5bc5e55ae85): <https://commits.webkit.org/279052@main> Reviewed commits have been landed. Closing PR #28782 and removing active labels.
Radar WebKit Bug Importer
Comment 5 2024-05-21 02:57:15 PDT
Philippe Normand
Comment 6 2024-05-21 07:35:18 PDT
Reopened Bugzilla. incomplete fix, tracking revert in https://bugs.webkit.org/show_bug.cgi?id=274467.
EWS
Comment 7 2024-05-21 10:28:32 PDT
Committed 279063@main (ff0ee80363c4): <https://commits.webkit.org/279063@main> Reviewed commits have been landed. Closing PR #28854 and removing active labels.
Philippe Normand
Comment 8 2024-05-22 01:24:38 PDT
.
Philippe Normand
Comment 9 2024-05-22 02:06:11 PDT
EWS
Comment 10 2024-05-23 05:35:45 PDT
Committed 279190@main (f6f7e5b1258f): <https://commits.webkit.org/279190@main> Reviewed commits have been landed. Closing PR #28905 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.